# rust_kafka_and_postgres

./: .env  Cargo.toml  README.md  producer.py
.cargo/: config.toml
src/: added_background_reccuring_jobs.rs  consumer.rs  main.rs  producer.rs  redis_caching.rs  using_postgres.rs
